Fixed narrow gap between navbar and top container

--- a/DeeperDive/src/main/webapp/css/navbar.css
+++ b/DeeperDive/src/main/webapp/css/navbar.css
@@ -4,3 +4,11 @@
 	font-size: 12pt;
 	color: white;
 }
+
+/* .user-logged {
+	color: white;
+} */
+
+.col-auto {
+	color: white;
+}
